tests/bad/expecting_named_arg.glaz
fn x(a: i32 = 10) {}

fn main() {
  x(a=10, 1);
}
